
=======================================================
            WanT code:  Log of Changes 
=======================================================


16 Jul 2007      Preprocessor bug of NEC SX6 fixed; WORKSROUND7 added to iotk lib,
                 thanks to Guido Roma and Paolo Giannozzi. (AF)

-------------------------------------------------
Date: 12 Jul 2007    Version: WanT-2.1.0
-------------------------------------------------

12 Jul 2007      Bug fixed in configure: when not searching for parallel environment,
                 mkl libs were not properly searched. (AF)

10 Jul 2007      Negative b-weights are allowed in bshells_init. (AF)

09 Jul 2007      Workaround to compile on old SGI machines implemented. (AF)

03 Jul 2007      The use of shared libs is the default during configuration. (AF)

23 Jun 2007      Documentation for current.x added (suggested by Matias Nunez); 
                 few typos fixed. Example of the usage of current.x added to test11. 
                 test11 refs updated. (AF)

15 Jun 2007      Test references updated for test02, test08, and test10. 
                 Other minor changes in the test suite. (AF)

13 Jun 2007      Updates in the documentation (CREDITS file added) and in the manual. (AF)

12 Jun 2007      test01 changed: only WFs for valence bands are computed to simplify 
                 the example. (AF)

08 Jun 2007      Graphene example updated (test03); Graphite exmple added to test12 to 
                 show another example fo transport calculation usng parallel kpts. (AF) 

07 Jun 2007      USPP augmentation added to plot.f90 and tested: since it is time-consuming
                 we also added an input variable to switchin in off (uspp_augmentation). (AF)  

06 Jun 2007      qexml lib almost complete: read/write of rho and write of wfc added. (AF)

21 May 2007      Cobalt example removed from test02; bands input changed (explicit output file