@@ -5,7 +5,8 @@
 
 
 16 Jul 2007      Preprocessor bug of NEC SX6 fixed; WORKSROUND7 added to iotk lib,
-                 thanks to Guido Roma and Paolo Giannozzi. (AF)
+                 thanks to Guido Roma and Paolo Giannozzi. Few changes to qexml.f90 due to 
+                 Paolo Giannozzi. (AF)
 
 -------------------------------------------------
 Date: 12 Jul 2007    Version: WanT-2.1.0
